# teacher-learner-wellbeing

./: .gitignore  .gitmodules  Makefile  Shakefile.hs  abby-adam.config  build.cabal  readme.md  readme.org
content/: index.md
content/instructions/: index.md
content/workshop/: choose-adventure.md  community-agreement-2.md  mental-wellbeing.md  module2.md  scavenger-hunt.md
source/presentations/: module1.md
source/workshop/: additional-resources-2.md  body-classroom.md  module1.md
website-src/: index.md
website-src/instructions/: index.md  module1-checkin.md  module2-checkin.md
website-src/presentations/: module1.md  module2.md
website-src/workshop/: additional-resources-1.md  additional-resources-2.md  community-agreement.md  discuss-wellbeing.md  index.md  learning-objective.md  mental-health-data.md  mental-wellbeing.md  module1.md  module2.md  teaching-to-transgress.md  titl.md
